# Arcade-Cabinet

./: .gitignore  README.md
games/: games.cfg
games/.import/: logo.png-0d4b971ed95a396009bff87c035072a2.md5  logo.png-eb3fff77a0188f4a15ddb174966726c9.stex
games/Pong/: logo.png.import  metadata.json
games/Pong2/: logo.png.import  metadata.json
games/Pong3/: logo.png.import  metadata.json
games/cube_checkers/: CMakeLists.txt  State_SplashScreen.hpp  cube_checkers
games/dodgy_blocks/dodgy_blocks/: CMakeLists.txt
games/duck_hunter/: CMakeLists.txt  main.cxx
games/mode-zero-racing/: car.py
games/shooter_guy/: main.py
games/signal_boost/game/: main.lua
games/slime-snake/src/: index.js
games/space_raider/: CMakeLists.txt  Enemy.cpp  Explosion.cpp  Game.cpp  Resource.cpp  Station.cpp  primer  space_raider
games/tetris-battle/: package-lock.json
menu/menu/: ArcadeMenu.pck  Game.gd  Instructions.gd  Instructions.tscn  ItemList.tscn  MainMenu.gd  MainMenu.tscn  State_DIYACMenu.cpp  btn1.png.import  btn2.png.import  btn3.png.import  btn4.png.import  btn5.png.import  def.jpg.import  default_font.tres  enter.png.import  esc.png.import  export_presets.cfg  games.pck  joystick_icon_white.png.import  menu  project.godot  start2.png.import
menu/menu/.import/: Red_1.png-5840ba37e348ce120a7013dd77f03353.md5  White_1.png-ca2e3c7bf0236848ea45de0bf0583b7a.md5  arrow_up.png-21355ee05dc2f19b655c626f41259777.md5  arrow_up.png-21355ee05dc2f19b655c626f41259777.stex  btn1.png-d33d3bbfd86102336f613742cfc5a967.md5  btn1.png-d33d3bbfd86102336f613742cfc5a967.stex  btn2.png-529fb4accc8fa21b74e1392f4cb64751.md5  btn2.png-529fb4accc8fa21b74e1392f4cb64751.stex  btn3.png-4676c4438387da27fdf2219195cd243e.md5  btn3.png-4676c4438387da27fdf2219195cd243e.stex  btn4.png-d521f4de0bfbd285d1e6c990e1584fdb.md5  btn4.png-d521f4de0bfbd285d1e6c990e1584fdb.stex  btn5.png-71b2e881c4a302ce55c7dd94ccde2be4.md5  btn5.png-71b2e881c4a302ce55c7dd94ccde2be4.stex  chevron-up-solid.svg-85d471ca2ed598bf314d97f0d9c71095.md5  def.jpg-95f8e214c86a7312fbc20a19301468b4.md5  def.jpg-95f8e214c86a7312fbc20a19301468b4.stex  down.png-cc614b252f16b05b3fda921affbe9569.md5  down.png-cc614b252f16b05b3fda921affbe9569.stex  (+18 more)
(+5 files in other folders)
